# wikiext

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: deploy-docs.yml  periodic.yml  regression.yml  release.yml
docs/: book.toml
docs/ja/: book.toml
docs/ja/src/: README.md  SUMMARY.md  getting-started.md  license.md  wicket-cli.md  wicket.md  wikiext-cli.md  wikiext.md
docs/ja/src/architecture/: data-flow.md  module-design.md  overview.md  workspace-structure.md
docs/ja/src/getting-started/: installation.md  quick-start.md
docs/ja/src/wicket/: cleaner.md  dump.md  error.md  output.md
docs/ja/src/wicket-cli/: examples.md  options.md
docs/ja/src/wikiext/: cleaner.md  dump.md  error.md  extractor.md
docs/ja/src/wikiext-cli/: examples.md  options.md
docs/src/: README.md  SUMMARY.md  getting-started.md  license.md  wicket-cli.md  wicket.md  wikiext-cli.md  wikiext.md
docs/src/architecture/: data-flow.md  module-design.md  overview.md  workspace-structure.md
docs/src/getting-started/: installation.md  quick-start.md
docs/src/wicket/: cleaner.md  dump.md  error.md  extractor.md  output.md
docs/src/wicket-cli/: examples.md  options.md
docs/src/wikiext/: cleaner.md  dump.md  error.md
docs/src/wikiext-cli/: examples.md  options.md
en/: 404.html  getting-started.html  index.html  license.html  print.html  searcher-c2a407aa.js  searchindex-d8f8b30e.js  wicket-cli.html  wicket.html
en/architecture/: data-flow.html  module-design.html  overview.html  workspace-structure.html
en/getting-started/: installation.html  quick-start.html
en/wicket/: cleaner.html  dump.html  error.html  extractor.html  output.html
en/wicket-cli/: examples.html  options.html
ja/: 404.html  getting-started.html  index.html  license.html  print.html  searcher-c2a407aa.js  searchindex-474af55e.js  wicket-cli.html  wicket.html
ja/architecture/: data-flow.html  module-design.html  overview.html  workspace-structure.html
ja/getting-started/: installation.html  quick-start.html
ja/wicket/: cleaner.html  dump.html  error.html  extractor.html  output.html
ja/wicket-cli/: examples.html  options.html
wicket/: Cargo.toml  README.md
wicket-cli/: Cargo.toml
wicket-cli/src/: main.rs
wicket/benches/: README.md  bench.rs
wicket/src/: cleaner.rs  dump.rs  error.rs  extractor.rs  lib.rs  output.rs
wikiext/: Cargo.toml
wikiext-cli/: Cargo.toml
wikiext-cli/src/: main.rs
wikiext/src/: cleaner.rs  dump.rs  error.rs  extractor.rs  lib.rs  output.rs
