[workspace]
members = ["wicket", "wicket-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Wikipedia corpus knowledge extractor."
documentation = "https://docs.rs/wicket"
homepage = "https://github.com/mosuka/wicket"
repository = "https://github.com/mosuka/wicket"
readme = "README.md"
keywords = ["wikipedia", "data", "extraction", "processing", "nlp"]
categories = ["text-processing"]
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
wicket = { version = "0.1.0", path = "./wicket" }

thiserror = "2.0.18"
log = "0.4.29"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bzip2 = "0.6.1"
rayon = "1.11.0"
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11.9"
anyhow = "1.0.102"
quick-xml = "0.39.2"
parse-wiki-text-2 = "0.2.0"
