[package]
name = "wicket-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation = "https://docs.rs/wicket-cli"
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[[bin]]
name = "wicket"
path = "src/main.rs"

[dependencies]
wicket.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
rayon.workspace = true
bzip2.workspace = true
anyhow.workspace = true
