[package]
name = "wicket"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false

[dependencies]
thiserror.workspace = true
log.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
bzip2.workspace = true
rayon.workspace = true
quick-xml.workspace = true
parse-wiki-text-2.workspace = true
