[package]
name = "wikiext"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Extract plain text from Wikipedia XML dumps by removing MediaWiki markup"

[dependencies]
thiserror.workspace = true
log.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
bzip2.workspace = true
rayon.workspace = true
quick-xml.workspace = true
parse-wiki-text-2.workspace = true
